--- a/.github/workflows/delivery.yaml
+++ b/.github/workflows/delivery.yaml
@@ -35,7 +35,7 @@ jobs:
       - name: Agent health checks
         run: agent_health_check
       - name: Run Delivery
-        uses: aspect-build/workflows-action@5.5.0-rc6
+        uses: aspect-build/workflows-action@5.5.0
         with:
           task: delivery
         env:
