--- a/.github/workflows/aspect-workflows.yaml
+++ b/.github/workflows/aspect-workflows.yaml
@@ -16,7 +16,7 @@ on:
       queue:
         description: the queue / runner pool that the setup step will run on
         type: string
-        default: default
+        default: aspect-default
       slack_webhook_url:
         description: 'if set, then a webhook notification will be sent for failing builds on a release branch. Input should match the name of a secret. "secrets: inherit" must also be set'
         type: string
@@ -26,7 +26,7 @@ on:
 
 jobs:
   setup:
-    runs-on: [self-hosted, aspect-workflows, "aspect-${{ inputs.queue }}"]
+    runs-on: [self-hosted, aspect-workflows, "${{ inputs.queue }}"]
     steps:
       - uses: actions/checkout@v3
       - id: rosetta-generate
@@ -34,7 +34,6 @@ jobs:
           echo "json=$( \
             rosetta steps \
             --config ${{ inputs.aspect-config }} \
-            --workspace . \
             --gha_task generate \
             --gha_json_pretty_print=false \
           )" | tee ${GITHUB_OUTPUT}
@@ -58,6 +57,7 @@ jobs:
 
       - name: Agent health checks
         run: agent_health_check
+        timeout-minutes: ${{ fromJson(needs.setup.outputs.cfg).task_config[fromJson(needs.setup.outputs.cfg).workflows_config[matrix.job].workspace].tasks['bazel_health_probe'].timeout_in_minutes }}
 
       - name: Process Secrets
         id: process_secrets
@@ -68,17 +68,25 @@ jobs:
           echo "filtered_secrets=${FILTERED_SECRETS}" | tee ${GITHUB_OUTPUT}
 
       - name: Branch Freshness
-        uses: aspect-build/workflows-action@5.6.4
+        uses: aspect-build/workflows-action@5.7.0-rc0
+        timeout-minutes: ${{ fromJson(needs.setup.outputs.cfg).task_config[fromJson(needs.setup.outputs.cfg).workflows_config[matrix.job].workspace].tasks['branch_freshness'].timeout_in_minutes }}
         with:
           workspace: ${{ fromJson(needs.setup.outputs.cfg).workflows_config[matrix.job].workspace }}
           task: branch_freshness
 
+      - name: Prepare archive directories
+        run: rm -rf ${{ join(fromJson(needs.setup.outputs.cfg).workflows_config[matrix.job].artifact_paths, ' ') }}
+
       - name: ${{ fromJson(needs.setup.outputs.cfg).workflows_config[matrix.job].task }}
-        uses: aspect-build/workflows-action@5.6.4
+        uses: aspect-build/workflows-action@5.7.0-rc0
         env: ${{ inputs.inherited_secrets != '' && fromJson(steps.process_secrets.outputs.filtered_secrets) || fromJson('{}') }}
+        timeout-minutes: ${{ fromJson(needs.setup.outputs.cfg).workflows_config[matrix.job].timeout_in_minutes }}
         with:
             workspace: ${{ fromJson(needs.setup.outputs.cfg).workflows_config[matrix.job].workspace }}
+            artifact_prefix: ${{ fromJson(needs.setup.outputs.cfg).workflows_config[matrix.job].artifact_prefix }}
+            artifact_upload_pattern: ${{ fromJson(needs.setup.outputs.cfg).workflows_config[matrix.job].artifact_upload_pattern }}
             task: ${{ fromJson(needs.setup.outputs.cfg).workflows_config[matrix.job].task }}
+            has_artifact_output: true
 
       - name: Send notification to Slack workflow
         id: slack
@@ -95,13 +103,14 @@ jobs:
 
       - name: Delivery Manifest
         if: fromJson(needs.setup.outputs.cfg).workflows_config[matrix.job].generate_manifest
-        uses: aspect-build/workflows-action@5.6.4
+        uses: aspect-build/workflows-action@5.7.0-rc0
+        timeout-minutes: ${{ fromJson(needs.setup.outputs.cfg).task_config[fromJson(needs.setup.outputs.cfg).workflows_config[matrix.job].workspace].tasks['delivery_manifest'].timeout_in_minutes }}
         with:
             workspace: ${{ fromJson(needs.setup.outputs.cfg).workflows_config[matrix.job].workspace }}
             task: delivery_manifest
             has_artifact_output: true
 
-      - name: Trigger Delivery 
+      - name: Trigger Delivery
         # This uses the following API: https://docs.github.com/en/rest/actions/workflows?apiVersion=2022-11-28#create-a-workflow-dispatch-event
         run: |
           curl \
