Sync internal change to GitHub

--- a/action.yaml
+++ b/action.yaml
@@ -13,6 +13,10 @@ inputs:
   task:
     description: the task that we want to generate steps for and then run
     required: true
+  args:
+    description: additional arguments to be passed to the task instance
+    required: false
+    default: ''
 
 runs:
   # Declare this is a "Composite Action"
@@ -23,6 +27,7 @@ runs:
     - run: |
         rosetta run \
           --workspace ${{ inputs.workspace }} \
-          ${{ inputs.task }}
+          ${{ inputs.task }} \
+          ${{ inputs.args }}
       shell: bash
       id: rosetta-step
