--- a/.github/workflows/.aspect-workflows-reusable.yaml
+++ b/.github/workflows/.aspect-workflows-reusable.yaml
@@ -1,7 +1,7 @@
 # ==================================================================================================
-# Aspect Workflows Reusable Workflow for GitHub Actions (v5.9.28)
+# Aspect Workflows Reusable Workflow for GitHub Actions (v5.8.21)
 #
-# https://github.com/marketplace/actions/aspect-workflows?version=5.9.28
+# https://github.com/marketplace/actions/aspect-workflows?version=5.8.21
 #
 # At this time, GitHub Actions does not allow referencing reusable workflows from public
 # repositories in other organizations. See
@@ -37,10 +37,10 @@
 #    jobs:
 #      aspect-workflows:
 #        name: Aspect Workflows
-#        uses: my-github-org/workflows-action/.github/workflows/.aspect-workflows-reusable.yaml@5.9.28
+#        uses: my-github-org/workflows-action/.github/workflows/.aspect-workflows-reusable.yaml@5.8.21
 #    ```
 # ==================================================================================================
-name: Aspect Workflows Reusable Workflow (v5.9.28)
+name: Aspect Workflows Reusable Workflow (v5.8.21)
 
 on:
   # Makes this workflow reusable, see
@@ -73,13 +73,12 @@ jobs:
       - uses: actions/checkout@v4
       - id: rosetta-generate
         run: |
-          ROSETTA_RESULT=$( \
+          echo "json=$( \
             rosetta steps \
             --config ${{ inputs.aspect-config }} \
             --gha_task generate \
             --gha_json_pretty_print=false \
-          )
-          tee "${GITHUB_OUTPUT}" <<< "json=${ROSETTA_RESULT}"
+          )" | tee ${GITHUB_OUTPUT}
 
     outputs:
       cfg: ${{ steps.rosetta-generate.outputs.json }}
@@ -88,7 +87,6 @@ jobs:
     needs: [setup]
     runs-on: ${{ fromJson(needs.setup.outputs.cfg).workflows_config[matrix.job].labels }}
     strategy:
-      fail-fast: false
       matrix: ${{ fromJson(needs.setup.outputs.cfg).matrix_config }}
     env:
       ASPECT_WORKFLOWS_CONFIG: ${{ inputs.aspect-config }}
@@ -102,7 +100,7 @@ jobs:
 
       - name: Agent health checks
         run: ${{ fromJson(needs.setup.outputs.cfg).platform.directories.WORKFLOWS_BIN_DIR }}/agent_health_check
-        timeout-minutes: ${{ fromJson(needs.setup.outputs.cfg).workflows_config[matrix.job].health_check_timeout }}
+        timeout-minutes: ${{ fromJson(needs.setup.outputs.cfg).task_config[fromJson(needs.setup.outputs.cfg).workflows_config[matrix.job].workspace].tasks['bazel_health_probe'].timeout_in_minutes }}
 
       - name: Process Secrets
         id: process_secrets
@@ -112,26 +110,18 @@ jobs:
           FILTERED_SECRETS=$(${{ fromJson(needs.setup.outputs.cfg).platform.directories.WORKFLOWS_BIN_DIR }}/jq --compact-output --argjson secrets "${REQUIRED_SECRETS}" 'with_entries( select (.key | test($secrets[]) ) )' <<< '''${{ toJson(secrets) }}''' )
           echo "filtered_secrets=${FILTERED_SECRETS}" | tee ${GITHUB_OUTPUT}
 
-      - name: Prepare archive directories
-        run: rm -rf ${{ join(fromJson(needs.setup.outputs.cfg).workflows_config[matrix.job].artifact_paths, ' ') }}
-
-      - name: Determine changed files
-        uses: tj-actions/changed-files@v42
-        if: endsWith(matrix.job, 'format')
-        with:
-          json: true
-          write_output_files: true
-          output_dir: ${{ fromJson(needs.setup.outputs.cfg).platform.directories.ARTIFACTS_DIR }}
-
       - name: Branch Freshness
-        uses: aspect-build/workflows-action@5.9.28
-        timeout-minutes: ${{ fromJson(needs.setup.outputs.cfg).workflows_config[matrix.job].branch_freshness_timeout }}
+        uses: aspect-build/workflows-action@5.8.21
+        timeout-minutes: ${{ fromJson(needs.setup.outputs.cfg).task_config[fromJson(needs.setup.outputs.cfg).workflows_config[matrix.job].workspace].tasks['branch_freshness'].timeout_in_minutes }}
         with:
           workspace: ${{ fromJson(needs.setup.outputs.cfg).workflows_config[matrix.job].workspace }}
           task: branch_freshness
 
-      - name: ${{ fromJson(needs.setup.outputs.cfg).workflows_config[matrix.job].name }}
-        uses: aspect-build/workflows-action@5.9.28
+      - name: Prepare archive directories
+        run: rm -rf ${{ join(fromJson(needs.setup.outputs.cfg).workflows_config[matrix.job].artifact_paths, ' ') }}
+
+      - name: ${{ fromJson(needs.setup.outputs.cfg).workflows_config[matrix.job].task }}
+        uses: aspect-build/workflows-action@5.8.21
         env: ${{ inputs.inherited_secrets != '' && fromJson(steps.process_secrets.outputs.filtered_secrets) || fromJson('{}') }}
         timeout-minutes: ${{ fromJson(needs.setup.outputs.cfg).workflows_config[matrix.job].timeout_in_minutes }}
         with:
@@ -142,7 +132,7 @@ jobs:
         id: slack
         # oncall cares about branches that do delivery, so key this on whether we produce a delivery manifest
         if: inputs.slack_webhook_url != '' && failure() && fromJson(needs.setup.outputs.cfg).workflows_config[matrix.job].generate_manifest
-        uses: slackapi/slack-github-action@v1.25.0
+        uses: slackapi/slack-github-action@v1.24.0
         with:
           payload: |
             {
@@ -153,12 +143,11 @@ jobs:
 
       - name: Delivery Manifest
         if: fromJson(needs.setup.outputs.cfg).workflows_config[matrix.job].generate_manifest
-        uses: aspect-build/workflows-action@5.9.28
-        timeout-minutes: ${{ fromJson(needs.setup.outputs.cfg).workflows_config[matrix.job].delivery_manifest_timout }}
+        uses: aspect-build/workflows-action@5.8.21
+        timeout-minutes: ${{ fromJson(needs.setup.outputs.cfg).task_config[fromJson(needs.setup.outputs.cfg).workflows_config[matrix.job].workspace].tasks['delivery'].timeout_in_minutes }}
         with:
             workspace: ${{ fromJson(needs.setup.outputs.cfg).workflows_config[matrix.job].workspace }}
             task: delivery_manifest
-            args: "--data TARGETS_SOURCE=${{ fromJson(needs.setup.outputs.cfg).workflows_config[matrix.job].task }}"
 
       # Upload all artifacts for the workspace
       - name: Upload Artifact
@@ -166,11 +155,10 @@ jobs:
         # Setting `continue-on-error: true` on previous steps isn't ideal as the UI
         # will flag them as having passed even if they failed.
         if: ${{ always() }}
-        uses: actions/upload-artifact@v4
+        uses: actions/upload-artifact@v3
         with:
           name: ${{ fromJson(needs.setup.outputs.cfg).workflows_config[matrix.job].artifact_prefix }}${{ fromJson(needs.setup.outputs.cfg).workflows_config[matrix.job].task }}.artifacts
           path: ${{ fromJson(needs.setup.outputs.cfg).workflows_config[matrix.job].artifact_upload_pattern }}
-          overwrite: true
 
       # Codecov
       - name: Codecov Upload
@@ -179,7 +167,7 @@ jobs:
         # will flag them as having passed even if they failed.
         if: ${{ always() && fromJson(needs.setup.outputs.cfg).workflows_config[matrix.job].codecov_upload }}
         # https://github.com/marketplace/actions/codecov
-        uses: codecov/codecov-action@v4
+        uses: codecov/codecov-action@v3
         with:
           files: bazel-out/_coverage/_coverage_report.dat
           token: ${{ secrets.CODECOV_TOKEN }}
