--- a/.github/workflows/.aspect-workflows-reusable.yaml
+++ b/.github/workflows/.aspect-workflows-reusable.yaml
@@ -1,7 +1,7 @@
 # ==================================================================================================
-# Aspect Workflows Reusable Workflow for GitHub Actions (v5.10.0-alpha.10.dev.138.gbfb52f3)
+# Aspect Workflows Reusable Workflow for GitHub Actions (v5.9.32)
 #
-# https://github.com/marketplace/actions/aspect-workflows?version=5.10.0-alpha.10.dev.138.gbfb52f3
+# https://github.com/marketplace/actions/aspect-workflows?version=5.9.32
 #
 # At this time, GitHub Actions does not allow referencing reusable workflows from public
 # repositories in other organizations. See
@@ -37,10 +37,10 @@
 #    jobs:
 #      aspect-workflows:
 #        name: Aspect Workflows
-#        uses: my-github-org/workflows-action/.github/workflows/.aspect-workflows-reusable.yaml@5.10.0-alpha.10.dev.138.gbfb52f3
+#        uses: my-github-org/workflows-action/.github/workflows/.aspect-workflows-reusable.yaml@5.9.32
 #    ```
 # ==================================================================================================
-name: Aspect Workflows Reusable Workflow (v5.10.0-alpha.10.dev.138.gbfb52f3)
+name: Aspect Workflows Reusable Workflow (v5.9.32)
 
 on:
   # Makes this workflow reusable, see
@@ -123,16 +123,15 @@ jobs:
           write_output_files: true
           output_dir: ${{ fromJson(needs.setup.outputs.cfg).platform.directories.ARTIFACTS_DIR }}
 
-      - name: Checkout Health
-        uses: aspect-build/workflows-action@5.10.0-alpha.10.dev.138.gbfb52f3
-        timeout-minutes: ${{ fromJson(needs.setup.outputs.cfg).workflows_config[matrix.job].checkout_task_timeout }}
-        if: fromJson(needs.setup.outputs.cfg).workflows_config[matrix.job].has_checkout_task
+      - name: Branch Freshness
+        uses: aspect-build/workflows-action@5.9.32
+        timeout-minutes: ${{ fromJson(needs.setup.outputs.cfg).workflows_config[matrix.job].branch_freshness_timeout }}
         with:
           workspace: ${{ fromJson(needs.setup.outputs.cfg).workflows_config[matrix.job].workspace }}
-          task: checkout
+          task: branch_freshness
 
       - name: ${{ fromJson(needs.setup.outputs.cfg).workflows_config[matrix.job].name }}
-        uses: aspect-build/workflows-action@5.10.0-alpha.10.dev.138.gbfb52f3
+        uses: aspect-build/workflows-action@5.9.32
         env: ${{ inputs.inherited_secrets != '' && fromJson(steps.process_secrets.outputs.filtered_secrets) || fromJson('{}') }}
         timeout-minutes: ${{ fromJson(needs.setup.outputs.cfg).workflows_config[matrix.job].timeout_in_minutes }}
         with:
@@ -154,7 +153,7 @@ jobs:
 
       - name: Delivery Manifest
         if: fromJson(needs.setup.outputs.cfg).workflows_config[matrix.job].generate_manifest
-        uses: aspect-build/workflows-action@5.10.0-alpha.10.dev.138.gbfb52f3
+        uses: aspect-build/workflows-action@5.9.32
         timeout-minutes: ${{ fromJson(needs.setup.outputs.cfg).workflows_config[matrix.job].delivery_manifest_timout }}
         with:
             workspace: ${{ fromJson(needs.setup.outputs.cfg).workflows_config[matrix.job].workspace }}
@@ -196,6 +195,6 @@ jobs:
             -H "Accept: application/vnd.github.v3+json" \
             -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
             https://api.github.com/repos/${{ github.repository }}/actions/workflows/${{ inputs.delivery-workflow }}/dispatches \
-            -d "{\"ref\":\"${{ fromJson(needs.setup.outputs.cfg).workflows_config[matrix.job].branch }}\",\"inputs\":{\"delivery_commit\":\"${GITHUB_SHA}\",\"workspace\":\"${{ fromJson(needs.setup.outputs.cfg).workflows_config[matrix.job].workspace }}\"}}"
+            -d "{\"ref\":\"${{ fromJson(needs.setup.outputs.cfg).workflows_config[matrix.job].branch }}\",\"inputs\":{\"delivery_commit\":\"${GITHUB_SHA}\"}}"
         shell: bash
         if: fromJson(needs.setup.outputs.cfg).workflows_config[matrix.job].delivery
